# launchpad

./: .ct.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  alembic.ini  pyproject.toml
.apolo/: applications.yaml
.apolo/src/apolo_apps_launchpad/: __init__.py  consts.py  inputs_processor.py  outputs_processor.py  types.py
.apolo/src/apolo_apps_launchpad/schemas/: LaunchpadAppInputs.json  LaunchpadAppOutputs.json
.github/workflows/: ci.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_apps_dummy.py  0001_installed_apps.py  0002_add_app_template.py  0003_rename_default_inputs_to_input.py  0004_composite_uniqueness_constraint.py  0005_add_external_url_list.py  7e32f815b489_make_default_inputs_required.py
charts/launchpad/: .gitignore  Chart.yaml  values.yaml
charts/launchpad/ci/: procore-values.yaml
charts/launchpad/templates/: 01_database-secret.yaml  02_launchpad_deployment.yaml  03_launchpad_client_service.yaml  03_launchpad_service.yaml  04_keycloak_ingress.yaml  04_launchpad_ingress.yaml  05_launchpad_client_ingress.yaml  05_launchpad_frontend_ingress.yaml  06_auth_middleware.yaml  _helpers.tpl  admin-secret.yaml  cleanup-job-secrets.yaml  cleanup-job.yaml  configmap-branding.yaml  configmap-keycloak-realm.yaml  deployment-launchpad.yaml  frontend-job.yaml  ingress-client.yaml  ingress-keycloak.yaml  ingress-launchpad.yaml  netlify-cleanup-job.yaml  netlify-configmap.yaml  secret-db.yaml  secret-keycloak-procore.yaml  service-client.yaml  service-launchpad.yaml  traefik-middleware-auth.yaml
charts/launchpad/tests/: deployment_test.yaml  keycloak-procore-secret_test.yaml  keycloak-realm_test.yaml
hooks/: coverage.hooks.xml  hooks.Dockerfile  pyproject.toml
hooks/tests/: conftest.py
hooks/tests/unit/: test_launchpad_input_generation.py  test_launchpad_output_generation.py
kc-theme/apolo/login/: login.ftl  template.ftl  theme.properties
kc-theme/apolo/login/messages/: messages_en.properties
kc-theme/apolo/login/resources/css/: custom.css
keycloak-procore-idp/: .tool-versions  README.md  pom.xml
keycloak-procore-idp/src/main/java/com/apolo/keycloak/procore/: ProcoreHttpClient.java  ProcoreIdentityProvider.java  ProcoreIdentityProviderConfig.java  ProcoreIdentityProviderFactory.java  ProcoreTokenResponse.java  ProcoreUserProfile.java
keycloak-procore-idp/src/test/java/com/apolo/keycloak/procore/: ProcoreHttpClientTest.java  ProcoreIdentityProviderConfigTest.java  ProcoreIdentityProviderFactoryTest.java  ProcoreIdentityProviderTest.java  ProcoreTokenResponseTest.java  ProcoreUserProfileTest.java
keycloak-test/: README.md  pom.xml  run.sh
keycloak-test/src/main/java/com/launchpad/: KeycloakTemplateServer.java
keycloak-test/src/main/resources/templates/: login.ftl
keycloak-theme/apolo/login/: login.ftl  theme.properties
keycloak-theme/apolo/login/messages/: messages_en.properties
keycloak-theme/apolo/login/resources/css/: custom.css
launchpad/: __main__.py  api.py  app.py  app_factory.py  config.py  errors.py  lifespan.py
launchpad/apps/: api.py  exceptions.py  lifecycle.py  lifespan.py  models.py  queries.py  resources.py  service.py  storage.py  template_models.py  template_storage.py
launchpad/apps/registry/: __init__.py  base.py  model.py
launchpad/apps/registry/handlers/: __init__.py  service_deployment.py
launchpad/apps/registry/internal/: __init__.py  context.py  embeddings.py  llm_inference.py  postgres.py
launchpad/apps/registry/shared/: openwebui.py
launchpad/auth/: __init__.py  api.py  dependencies.py  middleware.py  models.py  oauth.py
launchpad/db/: __init__.py  base.py  dependencies.py  lifespan.py  sync.py
launchpad/ext/: app_configurator.py  apps_api.py  launchpad_api.py
scripts/: cleanup-apps.py  cleanup-secrets.py  netlify-cleanup.py
tests/: conftest.py
tests/assets/: logo
tests/integration/: conftest.py  test_api.py  test_apps_templates.py  test_auth_callback.py  test_auth_set_cookie.py  test_auth_start.py  test_cookie_authentication.py  test_dummy.py  test_outputs_worker.py  test_token_error_handling.py
tests/unit/: test_api.py  test_app_configurator.py  test_apps_api_client.py  test_apps_registry.py  test_apps_service.py  test_apps_storage.py  test_auth.py  test_auth_authorize_and_logging.py  test_auth_authorize_headers.py  test_auth_callback_origin.py  test_auth_token.py  test_config.py  test_config_ssl.py  test_cookie_lifecycle.py  test_db.py  test_dummy.py  test_launchpad_api.py  test_middleware.py
