[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I"]  # Enable isort rules

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["launchpad", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli_level = "INFO"
log_cli_format = "%(levelname)s %(name)s:%(filename)s:%(lineno)s %(message)s"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:testcontainers",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["launchpad"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
pretty = true
extra_checks = true
# disallow_any_explicit = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncache.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.poetry]
name = "launchpad"
version = "0.1.0"
description = ""
authors = ["apolo.us"]
readme = "README.md"
packages = [
  { include = "launchpad" },
  { include = "apolo_apps_launchpad", from = ".apolo/src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
neuro-logging = "^25.6.1"
alembic = "^1.17.2"
sqlalchemy = "^2.0.45"
orjson = "^3.11.5"
python-dotenv = "^1.2.1"
fastapi-pagination = "^0.15.3"
aiohttp = "^3.13.2"
python-keycloak = "^5.8.1"
pydantic = "^2.12.5"
ujson = "^5.11.0"
backoff = "^2.2.1"
pyjwt = "^2.10.1"
asyncache = "^0.3.1"
asyncpg = "^0.31.0"
apolo-app-types = "v25.11.7"
apolo-sdk = "v25.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.9"
pre-commit = "^4.5.0"
mypy = "^1.19.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "1.3.0"
types-cachetools = "^6.2.0.20251022"
testcontainers = {extras = ["postgres"], version = "^4.13.3"}
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launchpad = "launchpad.main:main"
