[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
pretty = true
extra_checks = true
# disallow_any_explicit = true
plugins = "pydantic.mypy"


[tool.poetry]
name = "launchpad-install-hook"
version = "0.1.0"
description = ""
authors = ["apolo.us"]
readme = "README.md"
packages = [
  { include = "apolo_apps_launchpad", from = "../.apolo/src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
yarl = "^1.18.3"
pre-commit = "^4.2.0"
multidict = "^6.6.4"
apolo-app-types = "v25.10.2"
apolo-sdk = "v25.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.13.0"
pre-commit = "^4.3.0"
mypy = "^1.18.1"
pytest-cov = "^6.2.1"
